. [NEW] MotionStreak: Using new motion streak code. 10x faster than the old one.
. [NEW] OpenGL ES: Added support for OpenGL ES 2.0. OpenGL ES 1.1 is no longer supported
. [NEW] Profiler: API heavily updated to make it easier to integrate into any kind of component
. [NEW] Sprite: initWithTexture:rect is the designated initializer
. [NEW] SpriteBatchNode / Sprite / Node: Simplied rendering. Easiert to integrate with physics engines. Just subclass nodeToParentTransform().
. [NEW] SpriteBatchNode: Removed support for HONOR_TRANSFORM.
. [NEW] SpriteFrameCache: addSpriteFramesWithFile:textureFile renamed to addSpriteFramesWithFile:textureFilename to be consistent with the new API
. [NEW] Templates: Removed Xcode3 templates. Updated Xcode4 templates.
. [NEW] Tests: All tests use RootViewController
. [NEW] Tests: Box2d + cocos2d test: Added PhysicsSprite and other Box2d best practices
. [NEW] Tests: Chipmunk + cocos2d test: Added PhysicsSprite and other Chipmunk's best practices
. [NEW] Tests: FontTest uses  "bundle" fonts instead of FontLabel
. [NEW] Tests: Removed HelloWorld* tests
. [NEW] Tests: TextureTest has TextureCache#asyncWithBlock test
. [NEW] Tests: Removed Chipmunk iOS TestBed since it was outdated
. [NEW] Texture: Uses NPOT textures (gles20 already supports them)
. [NEW] Texture: PVRTC-RAW format is no longer supported. Use the non-raw format instead.
. [NEW] TextureCache: Added asyncWithBlock method
. [NEW] Tiled: cc_vertexz property is no longer supported. Will raise exception if found.
. [FIX] All: Removed deprecated methods and classes that were scheduled for removal post 1.0
. [FIX] Node: slightly faster nodeToParentTransform()
. [FIX] ProgressTimer: reverse renamed to reverseDirection in order to prevent possible collision with action#reverse
. [FIX] RenderTexture: getUIImageFromBuffer doesn't return artifacs
. [FIX] TextureCache: Uses "self" instead of "CCTextureCache" in shared instance
. [FIX] Sprite: displayedFrame correctly returns originalSize